<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная Тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_request_cleaning">Почистить поисковый запрос</string>
    <string name="course_link" translatable="false">Ссылка на курс: https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email" translatable="false">andrey@izoor.com</string>
    <string name="subj_for_developers" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_for_developers" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_hint">Вводите название песни на английском языке. Можно указать год для более точного поиска</string>
    <string name="you_search">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="to_previous_screen">на предыдущий экран</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="button_add_to_playlist">Кнопка Добавить в плейлист</string>
    <string name="button_play">Кнопка Плей</string>
    <string name="button_like">Кнопка Лайк</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="didnt_make_any_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="placeholder">Плейсхолдер</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="playlists">"Плейлисты"</string>
    <string name="featured_tracks">"Избранные треки"</string>
    <string name="title">Название*</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_playlist_creating" translatable="false">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_loose" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="tracks_time">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_info" translatable="false">%1$s • %2$s</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_to_detele_track">Хотите удалить трек?</string>
    <string name="no_tracks_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_is_required">Плейлист необходим</string>
    <string name="share">Поделиться</string>
    <string name="information_editing">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист</string>
</resources>