<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_4"
        app:contentInsetStartWithNavigation="@dimen/toolbar_content_inset"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:clickable="true">

        <TextView
            style="@style/SettingsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/padding_16"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"
            tools:checked="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/shareLabel"
        style="@style/SettingsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_12"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/supportLabel"
        style="@style/SettingsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_12"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/agreementLabel"
        style="@style/SettingsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_12"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_short_right" />

</LinearLayout>
