<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="@dimen/padding_bottom"
>

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/app_name"
        android:titleTextColor="@color/white"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/text_size_large"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_grey"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/media_library"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/text_size_large"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_grey"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/height_divider"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/text_size_large"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_grey"
        android:textAllCaps="false"
        android:layout_marginVertical="@dimen/height_divider"/>

</LinearLayout>
