<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            android:contentDescription="@string/to_previous_screen"
            android:padding="@dimen/padding_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upperLeftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upperRightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_26"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/upperRightBorder"
            app:layout_constraintStart_toStartOf="@id/upperLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/backArrow"
            tools:src="@drawable/demo_cover" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_22"
            app:layout_constraintEnd_toEndOf="@id/upperRightBorder"
            app:layout_constraintStart_toStartOf="@id/upperLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/albumCover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toEndOf="@id/upperRightBorder"
            app:layout_constraintStart_toStartOf="@id/upperLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/buttonAddToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/button_add_to_playlist"
            android:src="@drawable/button_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/upperLeftBorder"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />

        <ImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:contentDescription="@string/button_play"
            android:src="@drawable/button_play"
            app:layout_constraintEnd_toStartOf="@+id/buttonLike"
            app:layout_constraintStart_toEndOf="@id/buttonAddToPlaylist"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/buttonLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/button_like"
            android:src="@drawable/button_like"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintEnd_toEndOf="@id/upperRightBorder"
            app:layout_constraintStart_toEndOf="@id/buttonPlay"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />

        <TextView
            android:id="@+id/playingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/dark_grey"
            android:gravity="center"
            tools:text="00:30"
            app:layout_constraintStart_toStartOf="@id/upperLeftBorder"
            app:layout_constraintEnd_toEndOf="@id/upperRightBorder"
            app:layout_constraintTop_toBottomOf="@id/buttonPlay" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lowerLeftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lowerRightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/durationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/duration"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintStart_toStartOf="@id/lowerLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/playingTime" />

        <TextView
            android:id="@+id/durationData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/durationText"
            app:layout_constraintEnd_toEndOf="@id/lowerRightBorder"
            tools:text="05:35" />

        <TextView
            android:id="@+id/albumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/album"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintTag="album"
            app:layout_constraintStart_toStartOf="@id/lowerLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/durationText"
            app:layout_goneMarginStart="0dp" />

        <TextView
            android:id="@+id/albumData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintTag="album"
            app:layout_constraintBottom_toBottomOf="@id/albumText"
            app:layout_constraintEnd_toEndOf="@id/lowerRightBorder"
            app:layout_goneMarginStart="0dp"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintTag="year"
            app:layout_constraintStart_toStartOf="@id/lowerLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/albumText" />

        <TextView
            android:id="@+id/yearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintTag="year"
            app:layout_constraintBottom_toBottomOf="@id/yearText"
            app:layout_constraintEnd_toEndOf="@id/lowerRightBorder"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintStart_toStartOf="@id/lowerLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/yearText" />

        <TextView
            android:id="@+id/genreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/genreText"
            app:layout_constraintEnd_toEndOf="@id/lowerRightBorder"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintStart_toStartOf="@id/lowerLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/genreText" />

        <TextView
            android:id="@+id/countryData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/countryText"
            app:layout_constraintEnd_toEndOf="@id/lowerRightBorder"
            tools:text="@string/united_kingdom" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="album" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/yearGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="year" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>